feat(forms): Integrate react-hook-form and zod for student form validation
This commit refactors the StudentForm component to use `react-hook-form` for state management and `zod` for schema-based validation, aligning with Phase 2 of the enhancement plan.

- Adds `react-hook-form`, `@hookform/resolvers`, and `zod` as new dependencies.
- Creates a comprehensive Zod schema (`src/schemas/studentSchema.ts`) that defines all validation rules for student data, ensuring type safety and data integrity.
- Replaces all `useState`-based form logic in `StudentForm.tsx` with the `useForm` hook, simplifying the component by removing manual state updates, validation functions, and change handlers.
- Connects all form inputs to `react-hook-form` using the `register` method for seamless data binding.
- Updates reusable components in `FormControls.tsx` to consistently display validation error messages passed from `react-hook-form`.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,14 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.23.0",
     "recharts": "^2.12.7",
-    "serve": "^14.2.5"
+    "serve": "^14.2.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@testing-library/react": "^15.0.6",
